--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 </div>
 
                 <div class="btns">
-                  <a href="./Entrepreneurship.html">
+                  <a href="./linux.html">
                     <button class="start-btn">Read More</button>
                   </a>
                 </div>
@@ -84,7 +84,7 @@
                 </div>
 
                 <div class="btns">
-                  <a href="./Entrepreneurship.html">
+                  <a href="./adro.html">
                     <button class="start-btn">Read More</button>
                   </a>
                 </div>
@@ -106,7 +106,7 @@
                 </div>
 
                 <div class="btns">
-                  <a href="./Entrepreneurship.html">
+                  <a href="./management.html">
                     <button class="start-btn">Read More</button>
                   </a>
                 </div>
@@ -128,7 +128,7 @@
                 </div>
 
                 <div class="btns">
-                  <a href="./Entrepreneurship.html">
+                  <a href="./ui.html">
                     <button class="start-btn">Read More</button>
                   </a>
                 </div>
