change:php js files name

--- a/adro.html
+++ b/adro.html
@@ -176,7 +176,7 @@
         </section>
       </div>
     </main>
-    <script src="./js/fetchHeader.js"></script>
-    <script src="./js/showHideSidebar.js"></script>
+    <script src="./js/getcom.js"></script>
+    <script src="./js/sidebar.js"></script>
   </body>
 </html>
