--- a/index.html
+++ b/index.html
@@ -259,9 +259,9 @@
         </div>
       </section>
     </main>
-    <script src="./js/showHideSidebar.js"></script>
-    <script src="js /comments.js"></script>
-    <script src="js/loadComments.js"></script>
-    <script src="./js/fetchHeader.js"></script>
+    <script src="./js/sidebar.js"></script>
+    <script src="js/create.js"></script>
+    <script src="js/get.js"></script>
+    <script src="./js/getcom.js"></script>
   </body>
 </html>
