--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           </div>
           <div class="hero-img">
             <div class="circle"></div>
-            <img src="./lib/heroBackground.png" />
+            <img src="./assets/heroBackground.png" />
           </div>
         </div>
       </section>
@@ -52,7 +52,7 @@
           <div class="container">
             <div class="formation">
               <div class="image">
-                <img src="lib/Course1.png" alt="marketing" />
+                <img src="assets/Course1.png" alt="marketing" />
               </div>
               <div class="formation-info">
                 <h4>The Complete 2024 Linux Course: Beginner to Pro Level</h4>
@@ -60,7 +60,7 @@
                 <p>799DA</p>
                 <div class="rating">
                   <p>5.0</p>
-                  <img src="lib/star.png" alt="" />
+                  <img src="assets/star.png" alt="" />
                 </div>
 
                 <div class="btns">
@@ -72,7 +72,7 @@
             </div>
             <div class="formation">
               <div class="image">
-                <img src="lib/Course2.png" alt="marketing" />
+                <img src="assets/Course2.png" alt="marketing" />
               </div>
               <div class="formation-info">
                 <h4>Android Java Masterclass - Become an App Developer 2024</h4>
@@ -80,7 +80,7 @@
                 <p>799DA</p>
                 <div class="rating">
                   <p>5.0</p>
-                  <img src="lib/star.png" alt="" />
+                  <img src="assets/star.png" alt="" />
                 </div>
 
                 <div class="btns">
@@ -92,7 +92,7 @@
             </div>
             <div class="formation">
               <div class="image">
-                <img src="lib/Course3.png" alt="marketing" />
+                <img src="assets/Course3.png" alt="marketing" />
               </div>
               <div class="formation-info">
                 <h4>
@@ -102,7 +102,7 @@
                 <p>799DA</p>
                 <div class="rating">
                   <p>5.0</p>
-                  <img src="lib/star.png" alt="" />
+                  <img src="assets/star.png" alt="" />
                 </div>
 
                 <div class="btns">
@@ -114,7 +114,7 @@
             </div>
             <div class="formation">
               <div class="image">
-                <img src="lib/Course4.png" alt="marketing" />
+                <img src="assets/Course4.png" alt="marketing" />
               </div>
               <div class="formation-info">
                 <h4>
@@ -124,7 +124,7 @@
                 <p>799DA</p>
                 <div class="rating">
                   <p>5.0</p>
-                  <img src="lib/star.png" alt="" />
+                  <img src="assets/star.png" alt="" />
                 </div>
 
                 <div class="btns">
@@ -143,7 +143,7 @@
             <div class="container">
               <div class="promotion">
                 <div class="promoh">
-                  <img src="./lib/promotions.png" alt="" />
+                  <img src="./assets/promotions.png" alt="" />
                 </div>
                 <div class="promo-desc">
                   <h4>20%</h4>
@@ -152,7 +152,7 @@
               </div>
               <div class="promotion">
                 <div class="promoh">
-                  <img src="./lib/promotions.png" alt="" />
+                  <img src="./assets/promotions.png" alt="" />
                 </div>
                 <div class="promo-desc">
                   <h4>10%</h4>
@@ -161,7 +161,7 @@
               </div>
             </div>
             <div class="container" style="margin-top: 80px">
-              <div class="promotion">
+              <div class="promassetson">
                 <div class="promoh">
                   <img src="./lib/promotions.png" alt="" />
                 </div>
@@ -174,7 +174,7 @@
                 <div class="promoh">
                   <img src="./lib/promotions.png" alt="" />
                 </div>
-                <div class="promo-desc">
+                <div class="prassets-desc">
                   <h4>20%</h4>
                   <h5>Get 20% off on all courses for a limited time.</h5>
                 </div>
@@ -183,7 +183,7 @@
           </div>
         </aside>
       </section>
-
+      assets
       <section class="comments-section">
         <div class="comForm">
           <h3>Add a comment</h3>
@@ -192,7 +192,7 @@
               type="email"
               id="email"
               placeholder="E-mail"
-              required
+              requiredassets
             /><br />
             <textarea
               id="comment"
@@ -230,28 +230,28 @@
             <div class="comment">
               <div class="commenth">
                 <img src="lib/profile-icon-comments.png" alt="" />
-                <h5>exmaple@gmail.com</h5>
+                <h5>exmaplassetsmail.com</h5>
               </div>
               <p>okay now I have to writ about my goat method😉</p>
             </div>
             <div class="comment">
               <div class="commenth">
                 <img src="lib/profile-icon-comments.png" alt="" />
-                <h5>exmaple@gmail.com</h5>
+                <h5>exmaplassetsmail.com</h5>
               </div>
               <p>okay now I have to writ about my goat method😉</p>
             </div>
             <div class="comment">
               <div class="commenth">
                 <img src="lib/profile-icon-comments.png" alt="" />
-                <h5>exmaple@gmail.com</h5>
+                <h5>exmaplassetsmail.com</h5>
               </div>
               <p>okay now I have to writ about my goat method😉</p>
             </div>
             <div class="comment">
               <div class="commenth">
                 <img src="lib/profile-icon-comments.png" alt="" />
-                <h5>exmaple@gmail.com</h5>
+                <h5>exmaplassetsmail.com</h5>
               </div>
               <p>okay now I have to writ about my goat method😉</p>
             </div>
@@ -259,6 +259,7 @@
         </div>
       </section>
     </main>
+
     <script src="./js/sidebar.js"></script>
     <script src="js/create.js"></script>
     <script src="js/get.js"></script>
