--- a/nav.html
+++ b/nav.html
@@ -1,23 +1,23 @@
 <div class="side-bar">
   <button id="closebtn" onclick="hideSidebar()" class="toggle-btn">
-    <img src="./lib/nav/Close.png" alt=" " class="toggle" />
+    <img src="./assets/nav/Close.png" alt=" " class="toggle" />
   </button>
   <div class="sidebar-content">
     <div class="personel-info content">
       <div class="profile-image">
-        <img src="./lib/profile-image.jpeg" alt="" />
+        <img src="./assets/profile-image.jpeg" alt="" />
       </div>
       <div class="info">
         <div>
-          <img src="./lib/nav/user.png" alt="" />
+          <img src="./assets/nav/user.png" alt="" />
           <p>Name name</p>
         </div>
         <div>
-          <img src="./lib/nav/people.png" alt="man" />
+          <img src="./assets/nav/people.png" alt="man" />
           <p>group 1</p>
         </div>
         <div>
-          <img src="./lib/nav/email.png" alt="man" />
+          <img src="./assets/nav/email.png" alt="man" />
           <p>exmaple123@gmail.com</p>
         </div>
       </div>
