--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
               </div>
               <div class="promotion">
                 <div class="promoh">
-                  <img src="./lib/promotions.png" alt="" />
+                  <img src="./assets/promotions.png" alt="" />
                 </div>
                 <div class="promo-desc">
                   <h4>2%</h4>
@@ -172,9 +172,9 @@
               </div>
             </div>
             <div class="container" style="margin-top: 80px">
-              <div class="promassetson">
+              <div class="promotion">
                 <div class="promoh">
-                  <img src="./lib/promotions.png" alt="" />
+                  <img src="./assets/promotions.png" alt="" />
                 </div>
                 <div class="promo-desc">
                   <h4>20%</h4>
@@ -183,12 +183,8 @@
               </div>
               <div class="promotion">
                 <div class="promoh">
-                  <img src="./lib/promotions.png" alt="" />
+                  <img src="./assets/promotions.png" alt="" />
                 </div>
-
-                <div class="prassets-desc">
-                  <h4>20%</h4>
-                  <h5>Get 20% off on all courses for a limited time.</h5>
                 <div class="promo-desc">
                   <h4>10%</h4>
                   <h5>Get 10% off when you enroll with two friends</h5>
@@ -196,7 +192,7 @@
               </div>
               <div class="promotion">
                 <div class="promoh">
-                  <img src="./lib/promotions.png" alt="" />
+                  <img src="./assets/promotions.png" alt="" />
                 </div>
                 <div class="promo-desc">
                   <h4>2%</h4>
@@ -209,7 +205,7 @@
           </div>
         </aside>
       </section>
-      
+
       <section class="comments-section">
         <div class="comForm">
           <h3>Add a comment</h3>
