css for the main section

--- a/nav.html
+++ b/nav.html
@@ -1,6 +1,6 @@
 <div class="side-bar">
   <button id="closebtn" onclick="hideSidebar()" class="toggle-btn">
-    <img src="./lib/Close.png" alt=" " class="toggle" />
+    <img src="./lib/nav/Close.png" alt=" " class="toggle" />
   </button>
   <div class="sidebar-content">
     <div class="personel-info content">
@@ -9,7 +9,7 @@
       </div>
       <div class="info">
         <div>
-          <img src="./lib/nav/person.png" alt="" />
+          <img src="./lib/nav/user.png" alt="" />
           <p>Name name</p>
         </div>
         <div>
@@ -17,17 +17,17 @@
           <p>group 1</p>
         </div>
         <div>
-          <img src="./lib/nav/mail.png" alt="man" />
+          <img src="./lib/nav/email.png" alt="man" />
           <p>exmaple123@gmail.com</p>
         </div>
       </div>
     </div>
     <div class="links">
       <div class="links-content">
-        <p><a href="./adobe.html">Adobe after effects</a></p>
-        <p><a href="./backend.html">Backend dev</a></p>
-        <p><a href="./machin.html">Machine learning </a></p>
-        <p><a href="./seo.html">SEO</a></p>
+        <p><a href="https://www.linkedin.com">Linked In</a></p>
+        <p><a href="https://www.facebook.com/">Facebook</a></p>
+        <p><a href="https://www.instagram.com/">Instagram </a></p>
+        <p><a href="https://x.com">Twitter</a></p>
       </div>
     </div>
   </div>
