--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Instrument+Sans:ital,wght@0,400..700;1,400..700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=ADLaM+Display&display=swap"
       rel="stylesheet"
     />
   </head>
@@ -28,15 +34,19 @@
               abilities and understanding to excel in the current job market.
             </p>
             <div class="buttons">
-              <button class="CTA-btn">Explore Courses</button>
+              <a href="#courses">
+                <button class="CTA-btn">Explore Courses</button>
+              </a>
+              <button class="CTA-btn outline">Explore Courses</button>
             </div>
           </div>
           <div class="hero-img">
-            <img src="./lib/heroBackground.jpg" />
+            <div class="circle"></div>
+            <img src="./lib/heroBackground.png" />
           </div>
         </div>
       </section>
-      <section class="main-section">
+      <section class="main-section" id="courses">
         <section class="formations">
           <h3>Courses</h3>
           <div class="container">
@@ -45,13 +55,12 @@
                 <img src="lib/Course1.png" alt="marketing" />
               </div>
               <div class="formation-info">
-                <h4>Entrepreneurship and Business Life Course</h4>
-                <div class="price">
-                  <span>
-                    <img src="./lib/profile-icon-comments.png" alt="" />
-                    <p>Business</p>
-                  </span>
-                  <p>799DA</p>
+                <h4>The Complete 2024 Linux Course: Beginner to Pro Level</h4>
+
+                <p>799DA</p>
+                <div class="rating">
+                  <p>5.0</p>
+                  <img src="lib/star.png" alt="" />
                 </div>
 
                 <div class="btns">
@@ -63,16 +72,15 @@
             </div>
             <div class="formation">
               <div class="image">
-                <img src="lib/Course1.png" alt="marketing" />
+                <img src="lib/Course2.png" alt="marketing" />
               </div>
               <div class="formation-info">
-                <h4>Entrepreneurship and Business Life Course</h4>
-                <div class="price">
-                  <span>
-                    <img src="./lib/profile-icon-comments.png" alt="" />
-                    <p>Business</p>
-                  </span>
-                  <p>799DA</p>
+                <h4>Android Java Masterclass - Become an App Developer 2024</h4>
+
+                <p>799DA</p>
+                <div class="rating">
+                  <p>5.0</p>
+                  <img src="lib/star.png" alt="" />
                 </div>
 
                 <div class="btns">
@@ -84,16 +92,17 @@
             </div>
             <div class="formation">
               <div class="image">
-                <img src="lib/Course1.png" alt="marketing" />
+                <img src="lib/Course3.png" alt="marketing" />
               </div>
               <div class="formation-info">
-                <h4>Entrepreneurship and Business Life Course</h4>
-                <div class="price">
-                  <span>
-                    <img src="./lib/profile-icon-comments.png" alt="" />
-                    <p>Business</p>
-                  </span>
-                  <p>799DA</p>
+                <h4>
+                  I.T. Project Management for Beginners: A Step-by-Step Guide
+                </h4>
+
+                <p>799DA</p>
+                <div class="rating">
+                  <p>5.0</p>
+                  <img src="lib/star.png" alt="" />
                 </div>
 
                 <div class="btns">
@@ -105,16 +114,17 @@
             </div>
             <div class="formation">
               <div class="image">
-                <img src="lib/Course1.png" alt="marketing" />
+                <img src="lib/Course4.png" alt="marketing" />
               </div>
               <div class="formation-info">
-                <h4>Entrepreneurship and Business Life Course</h4>
-                <div class="price">
-                  <span>
-                    <img src="./lib/profile-icon-comments.png" alt="" />
-                    <p>Business</p>
-                  </span>
-                  <p>799DA</p>
+                <h4>
+                  User Experience (UX): The Ultimate Guide to Usability and UX
+                </h4>
+
+                <p>799DA</p>
+                <div class="rating">
+                  <p>5.0</p>
+                  <img src="lib/star.png" alt="" />
                 </div>
 
                 <div class="btns">
@@ -133,74 +143,40 @@
             <div class="container">
               <div class="promotion">
                 <div class="promoh">
-                  <p>20</p>
                   <img src="./lib/promotions.png" alt="" />
                 </div>
                 <div class="promo-desc">
-                  <h4>Limited Time Offer</h4>
+                  <h4>20%</h4>
                   <h5>Get 20% off on all courses for a limited time.</h5>
                 </div>
               </div>
               <div class="promotion">
                 <div class="promoh">
-                  <p>10</p>
                   <img src="./lib/promotions.png" alt="" />
                 </div>
                 <div class="promo-desc">
-                  <h4>Group Discount</h4>
-                  <h5>
-                    Enroll together, enjoy savings on our engaging courses.
-                  </h5>
-                </div>
-              </div>
-              <div class="promotion">
-                <div class="promoh">
-                  <p>30</p>
-                  <img src="./lib/promotions.png" alt="" />
-                </div>
-                <div class="promo-desc">
-                  <h4>Early Bird Special</h4>
-                  <h5>
-                    Secure your spot early and enjoy a substantial discount on
-                    upcoming courses.
-                  </h5>
+                  <h4>10%</h4>
+                  <h5>Get 20% off on all courses for a limited time.</h5>
                 </div>
               </div>
             </div>
             <div class="container" style="margin-top: 80px">
               <div class="promotion">
                 <div class="promoh">
-                  <p>20</p>
                   <img src="./lib/promotions.png" alt="" />
                 </div>
                 <div class="promo-desc">
-                  <h4>Limited Time Offer</h4>
+                  <h4>8%</h4>
                   <h5>Get 20% off on all courses for a limited time.</h5>
                 </div>
               </div>
               <div class="promotion">
                 <div class="promoh">
-                  <p>10</p>
                   <img src="./lib/promotions.png" alt="" />
                 </div>
                 <div class="promo-desc">
-                  <h4>Group Discount</h4>
-                  <h5>
-                    Enroll together, enjoy savings on our engaging courses.
-                  </h5>
-                </div>
-              </div>
-              <div class="promotion">
-                <div class="promoh">
-                  <p>30</p>
-                  <img src="./lib/promotions.png" alt="" />
-                </div>
-                <div class="promo-desc">
-                  <h4>Early Bird Special</h4>
-                  <h5>
-                    Secure your spot early and enjoy a substantial discount on
-                    upcoming courses.
-                  </h5>
+                  <h4>20%</h4>
+                  <h5>Get 20% off on all courses for a limited time.</h5>
                 </div>
               </div>
             </div>
@@ -231,7 +207,52 @@
           <h3>Comments</h3>
           <div id="comments-area">
             <div class="comment">
-              <h5>exmaple@gmail.com</h5>
+              <div class="commenth">
+                <img src="lib/profile-icon-comments.png" alt="" />
+                <h5>exmaple@gmail.com</h5>
+              </div>
+              <p>okay now I have to writ about my goat method😉</p>
+            </div>
+            <div class="comment">
+              <div class="commenth">
+                <img src="lib/profile-icon-comments.png" alt="" />
+                <h5>exmaple@gmail.com</h5>
+              </div>
+              <p>okay now I have to writ about my goat method😉</p>
+            </div>
+            <div class="comment">
+              <div class="commenth">
+                <img src="lib/profile-icon-comments.png" alt="" />
+                <h5>exmaple@gmail.com</h5>
+              </div>
+              <p>okay now I have to writ about my goat method😉</p>
+            </div>
+            <div class="comment">
+              <div class="commenth">
+                <img src="lib/profile-icon-comments.png" alt="" />
+                <h5>exmaple@gmail.com</h5>
+              </div>
+              <p>okay now I have to writ about my goat method😉</p>
+            </div>
+            <div class="comment">
+              <div class="commenth">
+                <img src="lib/profile-icon-comments.png" alt="" />
+                <h5>exmaple@gmail.com</h5>
+              </div>
+              <p>okay now I have to writ about my goat method😉</p>
+            </div>
+            <div class="comment">
+              <div class="commenth">
+                <img src="lib/profile-icon-comments.png" alt="" />
+                <h5>exmaple@gmail.com</h5>
+              </div>
+              <p>okay now I have to writ about my goat method😉</p>
+            </div>
+            <div class="comment">
+              <div class="commenth">
+                <img src="lib/profile-icon-comments.png" alt="" />
+                <h5>exmaple@gmail.com</h5>
+              </div>
               <p>okay now I have to writ about my goat method😉</p>
             </div>
           </div>
