--- a/index.html
+++ b/index.html
@@ -156,7 +156,18 @@
                 </div>
                 <div class="promo-desc">
                   <h4>10%</h4>
-                  <h5>Get 20% off on all courses for a limited time.</h5>
+                  <h5>Get 10% off when you enroll with two friends</h5>
+                </div>
+              </div>
+              <div class="promotion">
+                <div class="promoh">
+                  <img src="./lib/promotions.png" alt="" />
+                </div>
+                <div class="promo-desc">
+                  <h4>2%</h4>
+                  <h5>
+                    Get 2% for each referall that joins us with your code.
+                  </h5>
                 </div>
               </div>
             </div>
@@ -166,7 +177,7 @@
                   <img src="./lib/promotions.png" alt="" />
                 </div>
                 <div class="promo-desc">
-                  <h4>8%</h4>
+                  <h4>20%</h4>
                   <h5>Get 20% off on all courses for a limited time.</h5>
                 </div>
               </div>
@@ -175,8 +186,19 @@
                   <img src="./lib/promotions.png" alt="" />
                 </div>
                 <div class="promo-desc">
-                  <h4>20%</h4>
-                  <h5>Get 20% off on all courses for a limited time.</h5>
+                  <h4>10%</h4>
+                  <h5>Get 10% off when you enroll with two friends</h5>
+                </div>
+              </div>
+              <div class="promotion">
+                <div class="promoh">
+                  <img src="./lib/promotions.png" alt="" />
+                </div>
+                <div class="promo-desc">
+                  <h4>2%</h4>
+                  <h5>
+                    Get 2% for each referall that joins us with your code.
+                  </h5>
                 </div>
               </div>
             </div>
